:sparkles: feat: adicionando cp's ao lideres

--- a/dashboard.html
+++ b/dashboard.html
@@ -40,7 +40,7 @@
         </div>
     </div>
 
-    <script type="module">
+  <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/12.9.0/firebase-app.js";
         import { getFirestore, collection, query, where, onSnapshot, doc, updateDoc, deleteDoc } from "https://www.gstatic.com/firebasejs/12.9.0/firebase-firestore.js";
 
@@ -56,7 +56,6 @@
         const app = initializeApp(firebaseConfig);
         const db = getFirestore(app);
 
-        // Tornando as funções globais para o dashboard.js
         window.db = db;
         window.collection = collection;
         window.query = query;
@@ -65,10 +64,11 @@
         window.doc = doc;
         window.updateDoc = updateDoc;
         window.deleteDoc = deleteDoc;
+
+        window.dispatchEvent(new Event('firebaseReady'));
     </script>
 
-    <script src="dashboard.js"></script>
-    <script src="dashboard.js"></script>
+    <script type="module" src="dashboard.js"></script>
 </body>
 
 </html>
