--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <div class="section-title">OPÇÃO A: DIA ÚNICO</div>
         <div class="form-grid">
             <div class="full-width triple-grid">
+                <!-- Data com placeholder para forçar visualização -->
                 <div><label>Data:</label><input type="date" id="data_single"></div>
                 <div><label>Entrada:</label><input type="time" id="ent_single"></div>
                 <div><label>Saída:</label><input type="time" id="sai_single"></div>
@@ -59,12 +60,13 @@
 
         <div class="section-title">OPÇÃO B: MÚLTIPLOS DIAS</div>
         <div class="helper-text">
-            <strong>Exemplos:</strong><br>
-            1. 14/04(Seg) - 08:00 - 15:00 - Esqueci de marcar o ponto<br>
-            2. 15/04(Ter) - 07:00 a 12:00 - 15:00 a 19:00 - Viagem a trabalho
+            <strong>Limite:</strong> Máximo 10 linhas.<br>
+            <em>Ex: 14/04(Seg) - 08:00 - 15:00 - Esqueci o ponto</em><br>
+            <em>Ex: 15/04(Ter) - 07:00 ás 13h00 - 15:00 ás 20:00 - Viagem para itu</em>
         </div>
         <div style="padding: 0 15px;">
-            <textarea id="multi_ajustes" rows="3" placeholder="Digite os ajustes aqui..."></textarea>
+            <textarea id="multi_ajustes" rows="4" placeholder="Digite os ajustes aqui..."></textarea>
+            <div id="contador-linhas" style="font-size:10px; text-align:right; color:#666;">0/10 Linhas</div>
         </div>
 
         <div class="signature-area">
@@ -74,15 +76,41 @@
                     onclick="signaturePad.clear()">Limpar Assinatura</button>
                 <label style="margin-top:5px">ASSINATURA FUNCIONÁRIO</label>
             </div>
-            <div
-                style="display: flex; flex-direction: column; justify-content: flex-end; border-top: 1px solid #000; height: 120px; margin-top: 8px;">
-                <label>ASSINATURA DA GESTÃO</label>
-            </div>
         </div>
     </div>
 
     <div class="btn-container">
-        <button class="btn btn-pdf" onclick="processPDF()">BAIXAR E COMPARTILHAR PDF</button>
+        <!-- Botão mudou de "Baixar" para "Revisar" -->
+        <button class="btn btn-pdf" onclick="abrirModalRevisao()">REVISAR E ENVIAR</button>
+    </div>
+
+    <!-- MODAL DE REVISÃO -->
+    <div id="modal-revisao" class="modal-overlay" style="display:none;">
+        <div class="modal-content">
+            <h3>Confirme seus dados</h3>
+            <div id="resumo-dados" style="text-align:left; background:#f9f9f9; padding:15px; border-radius:5px; margin:15px 0; font-size:13px;">
+                <!-- JS Preenche -->
+            </div>
+            <div class="modal-actions">
+                <button class="btn btn-pdf" onclick="enviarDefinitivo()">CONFIRMAR E ENVIAR</button>
+                <button class="btn btn-clear" onclick="fecharModal('modal-revisao')">VOLTAR</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- MODAL DE SUCESSO -->
+    <div id="modal-sucesso" class="modal-overlay" style="display:none;">
+        <div class="modal-content">
+            <div style="font-size:40px;">✅</div>
+            <h3 class="success-message">Enviado com Sucesso!</h3>
+            <p>Seu líder já recebeu o comunicado.</p>
+            <p style="font-size:12px; color:#666;">Deseja baixar uma cópia para você?</p>
+            
+            <div class="modal-actions" style="flex-direction: column;">
+                <button class="btn btn-pdf" onclick="baixarCopiaPDF()">BAIXAR CÓPIA PDF</button>
+                <button class="btn btn-clear" onclick="location.reload()">Novo Formulário</button>
+            </div>
+        </div>
     </div>
 
     <script type="module">
@@ -105,8 +133,6 @@
         window.addDoc = addDoc;
         window.collection = collection;
         window.serverTimestamp = serverTimestamp;
-        
-        console.log("Firebase conectado com sucesso!");
     </script>
 
     <script src="script.js"></script>
