:sparkles: feat: arrumando dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -21,7 +21,7 @@
                 <h2 style="margin:0; font-size:16px;">PAINEL DE GESTÃO</h2>
                 <small id="nome-lider-exibicao">Carregando...</small>
             </div>
-            <button class="btn-clear" onclick="window.deslogar()" style="width: auto; padding: 5px 15px; font-size: 12px;">Sair ➜</button>
+            <button class="btn-clear" onclick="window.deslogar()" style="width: auto; padding: 5px 15px; font-size: 12px; ">Sair ➜</button>
         </header>
 
         <nav class="filter-nav">
@@ -46,7 +46,7 @@
 
             <div class="signature-box">
                 <label style="display:block; text-align:left; font-weight:bold;">Assinatura do Líder:</label>
-                <div style="border: 2px dashed #ccc; background: #fff; margin-top: 5px;">
+                <div style="border: 2px dashed #ccc; border-radius: 4px; background: #fff; margin-top: 5px;">
                     <canvas id="canvas-lider" width="500" height="150" style="width: 100%; display: block;"></canvas>
                 </div>
                 <button class="btn-clear" style="margin-top:5px; width:auto;" onclick="window.limparAssinaturaLider()">Limpar Desenho</button>
