--- a/login.html
+++ b/login.html
@@ -22,18 +22,37 @@
                 <label>E-mail:</label>
                 <input type="email" id="email" placeholder="seu@email.com" required>
             </div>
+            
             <div class="full-width">
                 <label>Senha:</label>
-                <input type="password" id="password" placeholder="••••••••" required>
+                <div class="password-wrapper">
+                    <input type="password" id="password" placeholder="••••••••" required>
+                    <!-- Ícone do Olhinho (Emoji para facilitar, ou SVG) -->
+                    <button type="button" class="toggle-password" onclick="toggleSenha()">👁️</button>
+                </div>
             </div>
 
             <div class="btn-container" style="padding: 0;">
                 <button type="submit" class="btn btn-pdf">Entrar</button>
-                <button type="button" class="btn btn-clear" onclick="window.location.href='index.html'">Voltar ao
-                    Início</button>
+                <button type="button" class="btn btn-clear" onclick="window.location.href='index.html'">Voltar ao Início</button>
             </div>
         </form>
     </div>
+
+    <script>
+        function toggleSenha() {
+            const input = document.getElementById('password');
+            const btn = document.querySelector('.toggle-password');
+            
+            if (input.type === "password") {
+                input.type = "text";
+                btn.innerText = "🔒"; 
+            } else {
+                input.type = "password";
+                btn.innerText = "👁️";
+            }
+        }
+    </script>
 
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/12.9.0/firebase-app.js";
@@ -51,7 +70,6 @@
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
 
-        // Lógica de Login
         document.getElementById('login-form').addEventListener('submit', async (e) => {
             e.preventDefault();
             const email = document.getElementById('email').value;
@@ -59,7 +77,7 @@
 
             try {
                 await signInWithEmailAndPassword(auth, email, senha);
-                window.location.href = 'dashboard.html'; // Sucesso!
+                window.location.href = 'dashboard.html'; 
             } catch (error) {
                 alert("Erro ao acessar: Verifique e-mail e senha.");
                 console.error(error.code);
@@ -67,5 +85,4 @@
         });
     </script>
 </body>
-
 </html>
