:sparkles: feat: colocando logo no site e no pdf

--- a/dashboard.html
+++ b/dashboard.html
@@ -7,6 +7,8 @@
     <title>Painel de Gestão - Ituano FC</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="./Ituano_logo.svg">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     
     <!-- Bibliotecas Essenciais -->
     <script src="https://cdn.jsdelivr.net/npm/signature_pad@4.0.0/dist/signature_pad.umd.min.js"></script>
@@ -31,7 +33,7 @@
         </nav>
 
         <main id="cp-list" class="cp-list-grid">
-            <p style="text-align:center; color:#999; margin-top:20px;">Conectando ao banco...</p>
+            <p style="text-align:center; color:#999; margin-top:20px;">Conectando ao banco de dados...</p>
         </main>
     </div>
 
